# todo-cli-rs

./: .gitignore  CHALLENGE.md  Cargo.toml  README.md
docs/: architecture.md  step-1-mvp.md
src/: main.rs
src/tasks/: mod.rs
src/tasks/adapters/: mod.rs
src/tasks/adapters/cli/: cli_command.rs  errors.rs  mod.rs  printer.rs
src/tasks/adapters/persistence/: in_memory_task_repository.rs  json_file_task_repository.rs  mod.rs
src/tasks/adapters/tui/: app.rs  errors.rs  event.rs  mod.rs  ui.rs
src/tasks/application/: command.rs  errors.rs  mod.rs
src/tasks/application/use_cases/: add_task.rs  delete_task.rs  edit_task.rs  list_tasks.rs  mark_task_done.rs  mark_task_todo.rs  mod.rs
src/tasks/domain/: errors.rs  mod.rs  task.rs
src/tasks/ports/outputs/: errors.rs  mod.rs  task_repository.rs
