[package]
name = "todo-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
tempfile = "3.25.0"
directories = "6.0.0"
