[package]
name = "todo-cli"
version = "1.0.0"
edition = "2024"

[dependencies]
#clap = { version = "4.5.59", features = ["derive"] }
color-eyre = "0.6.5"
ratatui = "0.29"
crossterm = "0.28.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
tempfile = "3.25.0"
directories = "6.0.0"
